# parallel2024

./: CMakeLists.txt  Changelog.txt  README.md  csr.cpp  csr.h  help.txt  input.cpp  input.h  main.cpp  mathfunc.cpp  mathfunc.h  solvers.cpp  solvers.h  tests.cpp
Data/mesh100K/: elements.txt
Report/: main.tex
Report/plotting/: mpi_dot.csv  plot.py  time.csv  time2.csv
Solver/: CGSolver.cpp  CGSolverMPI.cpp  CMakeLists.txt  csr.cpp  csr.h  main.cpp  solvers.cpp  solvers.cu  solvers.cuh  solvers.h
Solver/Kernels/: CMakeLists.txt  mathfunc.cpp  mathfunc.cu  mathfunc.cuh  mathfunc.h  scan.cpp  scan.h
Tests/: AXpYCUDATest.cu  AXpYCorrectnessTest.cpp  AXpYParallelTest.cpp  CMakeLists.txt  CSRBuildAdjacencyMatrixTest.cpp  CSRIncidenceTest.cpp  CSRTransposeTest.cpp  DeviceQueryTest.cu  DotCUDATest.cu  DotCorrectnessTest.cpp  DotParallelTest.cpp  ReadDataTest.cpp  ReduceCUDATest.cu  ScanTest.cpp  SolveTest.cpp  SpMVCorrectnessTest.cpp  tests.cpp
Tests/Time/: AXpYMeasure.cpp  AXpYMeasureCUDA.cu  CGSolverMeasure.cpp  CGSolverMeasureCUDA.cu  CMakeLists.txt  CSRAdjacencyMeasure.cpp  DotMeasure.cpp  DotMeasureCUDA.cu  SpMVMeasure.cpp  SpMVMeasureCUDA.cu
Utilities/: CMakeLists.txt  argparse.h  coms.cpp  coms.h  cuda_helper.cuh  input.cpp  input.h  logger.cpp  logger.h
report/: main.tex
